# apisql

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-cross.sh
.github/workflows/: build.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core_lib/: Cargo.toml
crates/core_lib/src/: ast.rs  errors.rs  lib.rs  parser.rs  query.rs
crates/core_lib/tests/: parser_test.rs
crates/lsp-backend/: Cargo.toml
crates/lsp-backend/src/: main.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: cache.rs  errors.rs  exec.rs  http.rs  lib.rs
crates/wasm/: .gitignore  Cargo.toml  README.md  package.json  test_wasm.js
crates/wasm/src/: lib.rs
examples/: eg.apisql  example.apisql  pokemon.apisql  test.apisql
vscode-extension/: .vscodeignore  LICENSE  README.md  build.js  package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: apisql.tmLanguage.json
