[package]
name = "lsp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core_lib = { path = "../core_lib" }
runtime = { path = "../runtime" }
regex = "1.12.2"
