[package]
name = "apisql"
version = "0.1.0"
edition = "2024"
description = "WASM bindings for ApiSQL - A query language for JSON APIs"
license = "MIT"
repository = "https://github.com/Tony-ArtZ/apisql"
authors = ["ApiSQL Contributors"]
keywords = ["wasm", "apisql", "json", "query"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
core_lib = { path = "../core_lib" }
